--- a/views/components/intro.pug
+++ b/views/components/intro.pug
@@ -1,6 +1,6 @@
 section.intro
   .logo-container
     a(href="/")
-      h1 ТзОВ "ПоперУкрКорпорейшен"
+      h1 ТзОВ "УкрПоКорпорейшен"
   .social-container
     include ../modules/social
