--- a/views/mixins/write-post-modal.pug
+++ b/views/mixins/write-post-modal.pug
@@ -28,12 +28,12 @@ mixin writePostModal()
             label(for="largePostSize") Великий
             input.post-size-radio(value="expanded", type="radio", name="postSize")#expandedPostSize
             label(for="expandedPostSize") Максимальний
+        
         label Виберіть категорію
             select.post-tag_name
-              option(value="city") Місто
-              option(value="advertisement") Оголошення
-              option(value="sport") Спорт
-              option(value="culture") Культура
+              option(value="ogolochenia") Оголошення
+              option(value="aktsia") Акція
+
         .additional-info-block
             .links-block
             .authors-block
