--- a/views/modules/social.pug
+++ b/views/modules/social.pug
@@ -1,5 +1,8 @@
 ul
   li
+    a.google-plus(href="https://web.telegram.org/", target="_blank")
+      img(src="images/telegram.png")
+  li
     a.facebook(href="https://www.facebook.com/", target="_blank")
       img(src="images/Facebook-icon-1.png")
   li
@@ -11,3 +14,6 @@ ul
   li
     a.google-plus(href="https://plus.google.com/discover", target="_blank")
       img(src="images/gp.png")
+  li
+    a.google-plus(href="https://www.viber.com/ru/", target="_blank")
+      img(src="images/viber.png")
