--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,6 +4,9 @@
 .Mercet-section>div:nth-child(even) { background-color: #e3e3e3; }
 .Mercet-section>div { padding: .5rem 0; }
 
+.order-box:nth-child(even) { background-color: #e3e3e3; }
+.order-box{ padding: .5rem 0; }
+
 .hidden {display: none;}
 
 
@@ -110,8 +113,8 @@ h1 {
 
 .main-post-preview img {
   width: 100%;
-  height: 100%;
-  max-height: 100%;
+  height: auto;
+ 
   max-width: 100%;
   object-fit: cover;
   object-position: center;
