--- a/views/mixins/buildings-filter.pug
+++ b/views/mixins/buildings-filter.pug
@@ -1,82 +1,69 @@
 mixin buildingsFilter()
   .column.row
-    form#searchBuildingForm
+    form#searchmarcetForm
       h3 Фільтр
       p
-        input(type="text", name="village", placeholder="селище")
+        input(type="text", name="nfirm", placeholder="Назва фірми")
       p
-        input(type="text", name="street", placeholder="вулиця")
+        input(type="text", name="nmisto", placeholder="Населений пункт")
       p
-        input(type="number", name="number", placeholder="номер будинку")
+        input(type="text", name="nstreet", placeholder="Адреса")
+      p
+        input(type="number", name="nhouse", placeholder="Будинок")
+
       section.expanded.row
-        h5 Загальна площа (м<sup>2</sup>)
+        h5 Максимальний % знижки
         .column
-          .slider(data-slider, data-initial-start="0", data-initial-end="100000", data-end="100000")
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="allAreaFrom")
+          .slider(data-slider, data-initial-start="0", data-initial-end="10", data-end="10")
+            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="znizkaFrom")
             span.slider-fill(data-slider-fill)
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="allAreaTo")
+            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="znizkaTo")
         .small-5.medium-5.large-5.column
-          input(type="number", name="allAreaFrom")#allAreaFrom
+          input(type="number", name="znizkaFrom")#znizkaFrom
         .small-5.medium-5.large-5.column
-          input(type="number", name="allAreaTo")#allAreaTo
-      section.expanded.row
-        h5 Площа проживання (м<sup>2</sup>)
-        .column
-          .slider(data-slider, data-initial-start="0", data-initial-end="10000", data-end="10000")
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="leavingAreaFrom")
-            span.slider-fill(data-slider-fill)
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="leavingAreaTo")
-        .small-5.medium-5.large-5.column
-          input(type="number", name="leavingAreaFrom")#leavingAreaFrom
-        .small-5.medium-5.large-5.column
-          input(type="number", name="leavingAreaTo")#leavingAreaTo
-      section.expanded.row
-        h5 Площа для сільського господарства (м<sup>2</sup>)
-        .column
-          .slider(data-slider, data-initial-start="0", data-initial-end="10000", data-end="10000")
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="sgAreaFrom")
-            span.slider-fill(data-slider-fill)
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="sgAreaTo")
-        .small-5.medium-5.large-5.column
-          input(type="number", name="sgAreaFrom")#sgAreaFrom
-        .small-5.medium-5.large-5.column
-          input(type="number", name="sgAreaTo")#sgAreaTo
-      section.expanded.row
-        h5 Площа для бізнесу (м<sup>2</sup>)
-        .column
-          .slider(data-slider, data-initial-start="0", data-initial-end="10000", data-end="10000")
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="businessAreaFrom")
-            span.slider-fill(data-slider-fill)
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="businessAreaTo")
-        .small-5.medium-5.large-5.column
-          input(type="number", name="businessAreaFrom")#businessAreaFrom
-        .small-5.medium-5.large-5.column
-          input(type="number", name="businessAreaTo")#businessAreaTo
-      section.expanded.row
-        h5 Площа під ліс (м<sup>2</sup>)
-        .column
-          .slider(data-slider, data-initial-start="0", data-initial-end="10000", data-end="10000")
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="forestAreaFrom")
-            span.slider-fill(data-slider-fill)
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="forestAreaTo")
-        .small-5.medium-5.large-5.column
-          input(type="number", name="forestAreaFrom")#forestAreaFrom
-        .small-5.medium-5.large-5.column
-          input(type="number", name="forestAreaTo")#forestAreaTo
-      section.expanded.row
-        h5 Кількість жильців (шт)
-        .column
-          .slider(data-slider, data-initial-start="0", data-initial-end="55", data-end="200")
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="leavers")
-            span.slider-fill(data-slider-fill)
-        .small-5.medium-5.large-5.column
-          input(type="number", name="leavers")#leavers
-      section.expanded.row
-        h5 Кількість власників (шт)
-        .column
-          .slider(data-slider, data-initial-start="0", data-initial-end="1", data-end="10")
-            span.slider-handle(data-slider-handle, role="slider", tabindex="1", aria-controls="owners")
-            span.slider-fill(data-slider-fill)
-        .small-5.medium-5.large-5.column
-          input(type="number", name="owners")#owners
+          input(type="number", name="znizkaTo")#znizkaTo
+
+      input.expanded.button.success(type="submit", value="Почати пошук")
+
+
+
+mixin skladfilter()
+  .column.row
+    form#searchskladForm
+      h3 Фільтр
+      p
+        input(type="text", name="namet", placeholder="Назва товару")
+      
+      -
+        var types = [
+          { name: 'ntip', value: 'PET', text: 'ПЕТ' },
+          { name: 'ntip', value: 'PNT', text: 'ПНТ' },
+          { name: 'ntip', value: 'BOCH', text: 'Бочка' },
+          { name: 'ntip', value: 'CIS', text: 'Цистерна' },
+          { name: 'ntip', value: 'BID', text: 'Бідон' } 
+        ]
+
+      p
+        label.labellist Товар
+          select
+            each tip in types
+              option(value=tip.value, name=tip.name)= tip.text
+      
+      p
+        input(type="text", name="nvir", placeholder="Виробник")
+      p
+        input(type="text", name="npos", placeholder="Постачальник")
+      p
+        input(type="text", name="ncolor", placeholder="Колір")
+      p
+        input(type="number", name="nlitr", placeholder="Літраж")
+      p
+        input(type="number", name="nzak", placeholder="Закуп. ціна")
+      p
+        input(type="number", name="nopt", placeholder="Оптова ціна")
+      p
+        input(type="number", name="nrozd", placeholder="Роздріб. ціна")
+
+
+
       input.expanded.button.success(type="submit", value="Почати пошук")
