--- a/views/pages/b_marcet.pug
+++ b/views/pages/b_marcet.pug
@@ -6,7 +6,7 @@ block content
     main.expanded.row#main
         a.expanded.button.create-post-btn(type="button", href="/b_new_permarcet?add=true", target="_blank") Додати новий магазин
            
-        .expanded.column
+        .medium-9.large-10.column
             if (Marcets)
                 .title-row.expanded.row
                     .small-3.medium-3.large-3.column Назва фірми
@@ -21,6 +21,6 @@ block content
                     each Marcet in Marcets
                         +b_magazinfo(Marcet, i)
                         - i++
-        .medium-4.large-3.column
-            //if (Marcets)
-              //  +residentsFilter()
+        .medium-3.large-2.column
+            if (Marcets)
+                +buildingsFilter()
