--- a/views/pages/b_sklad.pug
+++ b/views/pages/b_sklad.pug
@@ -6,7 +6,7 @@ block content
     main.expanded.row#main
         
            
-        .expanded.column
+        .medium-10.large-10.column
             if (Tovari)
                 .title-row.expanded.row
                     .small-2.medium-2.large-2.column Назва товару
@@ -25,6 +25,8 @@ block content
                     each Tovar in Tovari
                         +b_skladinfo(Tovar, i)
                         - i++
-        .medium-4.large-3.column
-            //if (Tovari)
-              //  +residentsFilter()
+        
+        .medium-2.large-2.column
+            if (Tovari)
+                +skladfilter()
+
