--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -2,13 +2,13 @@ ul.menu
   li
       a(href="/feed") Головна 
   li
-    a(href="/city") Оголошення
+    a(href="/ogolochenia") Оголошення
   li
     a(href="/b_zamovlenia") Створити замовлення
   li
     a(href="/b_sklad") Склад
   li
-    a(href="/culture") Акції
+    a(href="/aktsia") Акції
   if (admin)
     li
       a(nohref)="|"
