--- a/views/pages/a_infa.pug
+++ b/views/pages/a_infa.pug
@@ -1,5 +1,6 @@
 extends ../layout/default
-
+block nazva
+  title Детальна інформація по замовленню   
 block content
     
     main.expanded.row#main
