--- a/views/pages/b_new_torgoviy.pug
+++ b/views/pages/b_new_torgoviy.pug
@@ -1,5 +1,6 @@
 extends ../layout/default
-
+block nazva
+  title Оформлення нового торгового
 block common
   script.
     function getQueryVariable(variable) {
