--- a/views/pages/b_zamovlenia.pug
+++ b/views/pages/b_zamovlenia.pug
@@ -1,5 +1,6 @@
 extends ../layout/default
-    
+block nazva
+  title Оформлення нового замовлення   
 block common
     script(src="javascripts/add.js")
     
