--- a/views/pages/frontpage.pug
+++ b/views/pages/frontpage.pug
@@ -1,5 +1,6 @@
 extends ../layout/default
-    
+block nazva
+  title УкрПоКорпорейшен. Головна сторінка   
 block content
   main#main.expanded.row
     if (admin)
